--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <!-- comment added -->
     <div class="countdown_container">
         <div class="container">
             <h1>Happy New Year Comming...</h1>
